saving new employee

--- a/seventh_semester/cs322/project/istv-backend/istv-backend/istv-backend/appsettings.json
+++ b/seventh_semester/cs322/project/istv-backend/istv-backend/istv-backend/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "server=localhost;port=3306;database=istv_dev;user=istv;password=istv"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8080"
+      },
+      "Https": {
+        "Url": "https://localhost:5401"
+      }
+    }
   }
 }
